# oneMillion

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
docs/: README.md  code_standards.md  cursor_tips.md  development_guide.md  project_progress.md  setup.md
src/: config.py  exchange_client.py  test_exchange_config.py
src/core/: exchange.py  monitor.py  risk_manager.py
src/core/exchange/: README.md  __init__.py  account.py  client.py  historical.py  market_data.py
src/core/orders/: __init__.py  manager.py  order_manager.py
src/core/position/: __init__.py  position_manager.py
src/core/risk/: risk_manager.py  validator.py
src/strategies/: base_strategy.py
src/utils/: __init__.py  logger.py
tests/: test_exchange_config.py
tests/core/exchange/: conftest.py  test_account.py  test_client.py  test_historical.py  test_market_data.py
tests/core/orders/: test_order_manager.py
tests/core/position/: test_position_manager.py
