[project]
name = "onemillion"
version = "0.1.0"
description = "Automated cryptocurrency trading system focusing on BTC/USDT trading pair"
authors = [
    {name = "OneMillion Trading Bot Team"}
]
dependencies = [
    "gate-api>=4.0.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "python-dotenv>=0.19.0",
    "aiohttp>=3.8.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE"}

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "pytest-cov>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 