[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oneMillion"
version = "0.1.0"
authors = [
  { name="snowpeakliu", email="snowpeakliu@gmail.com" },
]
description = "Cryptocurrency trading bot"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "websockets",
    "requests",
    "pytest",
    "pytest-asyncio"
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
asyncio_mode = "auto"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "pytest-cov>=3.0.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 